Integracion ventas y artistas
